fix rss sprite bleed on group post buttons

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -3513,7 +3513,8 @@ _background:url('../images/sprites.gif') 0 0 no-repeat;
   background: url('../images/send_email.png') left 50% no-repeat;
 }
 
-.activity_stream .icon:before { background: none; }
+.activity_stream .icon:before,
+.post_trigger .icon:before { background: none; }
 
 
 li.subscribe ul li{
